<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settingsFragment"
    android:background="@drawable/bg1"

    >

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/profileSettingsbtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="260dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_selector"
        android:text="@string/my_account_settings"
        app:icon="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="@+id/a"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/a"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/a"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileSettingsbtn"
        android:layout_alignParentStart="true"
        app:icon="@drawable/paymenic"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/payment_settings"
        app:layout_constraintEnd_toEndOf="@+id/b"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/b"
        app:layout_constraintTop_toBottomOf="@+id/profileSettingsbtn" />

    <Button
        android:id="@+id/b"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:layout_alignParentStart="true"
        app:icon="@drawable/lanic"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/languages"
        app:layout_constraintEnd_toEndOf="@+id/c"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/c"
        app:layout_constraintTop_toBottomOf="@+id/a" />

    <Button
        android:id="@+id/c"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b"
        android:layout_alignParentStart="true"
        app:icon="@drawable/reportpic"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/report_a_problems"
        app:layout_constraintEnd_toEndOf="@+id/d"
        app:layout_constraintStart_toStartOf="@+id/d"
        app:layout_constraintTop_toBottomOf="@+id/b" />

    <Button
        android:id="@+id/d"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/support_service"
        app:layout_constraintEnd_toEndOf="@+id/logout"
        app:layout_constraintStart_toStartOf="@+id/logout"
        app:icon="@drawable/supic"
        app:layout_constraintTop_toBottomOf="@+id/c" />


    <Button
        android:id="@+id/logout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/logoutic"

        android:layout_marginStart="65dp"
        android:layout_marginEnd="86dp"
        android:background="@drawable/button_selector"
        android:text="@string/string_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d"
        app:layout_constraintVertical_bias="0.358" />
</androidx.constraintlayout.widget.ConstraintLayout>