<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">


    <TextView
        android:id="@+id/textView"
        android:layout_width="158dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/Signup"
        android:textColor="@color/defaultAppTextColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/contentDescriptionLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/ebusbooklogo" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname"
        app:layout_constraintVertical_bias="0.015" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/emailaddress"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname"
        app:layout_constraintVertical_bias="0.013" />

    <EditText
        android:id="@+id/password"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        app:layout_constraintVertical_bias="0.012"
        app:passwordToggleEnabled="true"
        />



    <EditText
        android:id="@+id/rePassword"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/conformpassword"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.011" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/telephonenumber"
        android:inputType="phone"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rePassword"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/register"
        android:layout_width="137dp"
        android:layout_height="61dp"
        android:layout_marginEnd="16dp"
        android:text="@string/registerbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/goLogin"
        app:layout_constraintTop_toBottomOf="@+id/Phone"
        app:layout_constraintVertical_bias="0.086"
        android:background="@drawable/button_selector"/>

    <TextView
        android:id="@+id/goLogin"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/allreadyreg"
        android:textColor="@color/defaultAppTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>