<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settingsFragment"
    android:background="@drawable/bg1"

    >

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/profileupdatebtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="260dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginTop="192dp"
        android:background="@drawable/button_selector"
        android:text="@string/string_update_my_account"
        app:icon="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetpasswordbtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="260dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/string_reset_password"
        app:icon="@drawable/ic_baseline_vpn_key_24"
        app:layout_constraintEnd_toEndOf="@+id/profileupdatebtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileupdatebtn"
        app:layout_constraintTop_toBottomOf="@+id/profileupdatebtn" />

    <Button
        android:id="@+id/verifyAccountbtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="260dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/verify"
        app:icon="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="@+id/resetpasswordbtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resetpasswordbtn"
        app:layout_constraintTop_toBottomOf="@+id/resetpasswordbtn" />

    <Button
        android:id="@+id/deleteAccountbtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="260dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_selector"
        android:text="@string/string_delete_account"
        app:icon="@drawable/delic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verifyAccountbtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/verifyAccountbtn"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountbtn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>